[feat] Internal API 인증중앙화 연결